﻿
BrawlCrate - v0.16
Copyright © 2018 soopercool101, MarioDox, Syvkal
BrawlBox  © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.16 - (11/14/2018)
 . Improved Collada import/export
   - Now respects multiple subentries for materials
   - Now respects wrapping and filtering for material entries
 . Issues now get reported to https://github.com/BrawlCrate/BrawlCrateIssues/issues
 . Fixes bugs in which open models would crashed when stripped
 . Fixes bugs in which older MDL0 with messed-up normals would crash when exporting to dae
 . Slightly improve updater speed and lower GitHub API calls made by it (making it and the issue reporter more reliable)
 
 - BrawlCrate v0.15 - (11/10/2018)
 . Now includes option to install updates automatically, displaying a changelog whenever an update is first opened.
 . Improved editor tools for MSBin/MSG files
   - Adding a line now inserts it after the selected line
   - Lines can now be moved up and down
 . "Save As" now uses Ctrl+Shift+S as a shortcut, rather than Ctrl+A
 . Export All now puts BRRES's in subfolders to minimize overwrites (Now works for Smashville, for instance)
 . Added option to strip a model down to its bones (useful for skeleton stage creation)
 . Fixed DPI bug when importing PNGs with palettes on certain systems