@@ -14,12 +14,13 @@ namespace BrawlCrate
     static class Program
     {
         //Make sure this matches the tag name of the release on github exactly
-        public static readonly string TagName = "BrawlCrate_v0.16";
-        public static readonly string UpdateMessage = "Updated to BrawlCrate v0.16! This release:\n" +
+        public static readonly string TagName = "BrawlCrate_v0.16Hotfix1";
+        public static readonly string UpdateMessage = "Updated to BrawlCrate v0.16 Hotfix 1! This release:\n" +
             "\n- Improves DAE import/export" +
             "\n- Moves issue reporter to https://github.com/BrawlCrate/BrawlCrateIssues/issues" +
             "\n- Fixes bug in which models with open subfolders would crash when stripped to bones" +
             "\n- Improves updater speed" +
+            "\n- (Hotfix 1) Fixes various updater bugs introduced in the last patch" +
             "\n\nFull changelog can be found in the installation folder:\n" + AppDomain.CurrentDomain.BaseDirectory + "Changelog.txt";
 
         public static readonly string AssemblyTitle;
