@@ -36,4 +36,4 @@ BrawlLib Copyright © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie && Sam
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("0.16.*")]
-[assembly: AssemblyFileVersion("0.16.0.0")]
+[assembly: AssemblyFileVersion("0.16.1.0")]
